import { Injectable } from '@nestjs/common';
import { InjectRepository } from '@nestjs/typeorm';
import { Repository } from 'typeorm';
import { Pay } from './pay.entity';
import {
  GetPayByUserIdRequest,
  PayResponse,
  UpdateMoneyRequest,
  UpdateStatusRequest,
  CreatePayRequest,
  CreatePayOrderRequest,
  QrResponse,
} from 'proto/pay.pb';
import { status } from '@grpc/grpc-js';
import { RpcException } from '@nestjs/microservices';
import { winstonLogger } from 'src/logger/logger.config';
import { FinanceService } from 'src/finance/finance.service';

@Injectable()
export class PayService {
  constructor(
    @InjectRepository(Pay)
    private readonly payRepository: Repository<Pay>,

    private readonly financeService: FinanceService,
  ) {}

  async getPayByUserId(data: GetPayByUserIdRequest): Promise<PayResponse> {
    const pay = await this.payRepository.findOne({ where: { userId: data.userId } });
    if (!pay) throw new RpcException({code: status.NOT_FOUND ,message: 'Kh√¥ng t√¨m th·∫•y v√≠ c·ªßa user'});
    return {
        pay: {
            ...pay,
            updatedAt: pay.updatedAt.toISOString(), 
        },
        message: 'L·∫•y v√≠ th√†nh c√¥ng',
    };
  }

  async updateMoney(data: UpdateMoneyRequest): Promise<PayResponse> {
    const pay = await this.payRepository.findOne({ where: { userId: data.userId } });
    if (!pay) throw new RpcException({code: status.NOT_FOUND ,message: 'Kh√¥ng t√¨m th·∫•y v√≠ c·ªßa user'});
    if (pay.status === 'locked') throw new RpcException({code: status.PERMISSION_DENIED ,message: 'v√≠ c·ªßa b·∫°n ƒë√£ b·ªã kh√≥a'});

    const currentMoney = parseInt(pay.tien);
    const newMoney = currentMoney + Number(data.amount);
    if (newMoney < 0) throw new RpcException({code: status.INVALID_ARGUMENT ,message: 'S·ªë ti·ªÅn kh√¥ng h·ª£p l·ªá'});

    pay.tien = newMoney.toString();
    pay.updatedAt = new Date();
    await this.payRepository.save(pay);

    return { 
        pay: {
            ...pay,
            updatedAt: pay.updatedAt.toISOString(), 
        },
        message: 'C·∫≠p nh·∫≠t s·ªë d∆∞ th√†nh c√¥ng'
    };
  }

  async updateStatus(data: UpdateStatusRequest): Promise<PayResponse> {
    const pay = await this.payRepository.findOne({ where: { userId: data.userId } });
    if (!pay) throw new RpcException({code: status.NOT_FOUND ,message: 'Kh√¥ng t√¨m th·∫•y v√≠ c·ªßa user'});

    pay.status = data.status;
    pay.updatedAt = new Date();
    await this.payRepository.save(pay);

    return { 
        pay: {
            ...pay,
            updatedAt: pay.updatedAt.toISOString(), 
        },
        message: `ƒê√£ ${data.status === 'locked' ? 'kh√≥a' : 'm·ªü kh√≥a'} v√≠` 
    };
  }

  async createPay(data: CreatePayRequest): Promise<PayResponse> {
    const existed = await this.payRepository.findOne({ where: { userId: data.userId } });
    if (existed) throw new RpcException({code: status.ALREADY_EXISTS ,message: 'V√≠ ƒë√£ t·ªìn t·∫°i'});

    const newPay = this.payRepository.create({
      userId: data.userId,
      tien: '0',
      status: 'open',
      updatedAt: new Date(),
    });

    const saved = await this.payRepository.save(newPay);
    return { 
        pay: {
            ...saved,
            updatedAt: saved.updatedAt.toISOString(), 
        },
        message: 'T·∫°o v√≠ th√†nh c√¥ng' 
    };
  }

  async createPayOrder(data: CreatePayOrderRequest): Promise<QrResponse> {
    const pay = await this.payRepository.findOne({ where: { userId: data.userId } });
    if (!pay) throw new RpcException({code: status.NOT_FOUND ,message: 'Kh√¥ng t√¨m th·∫•y v√≠ c·ªßa user'});
    if (data.amount < 0) throw new RpcException({code: status.INVALID_ARGUMENT ,message: 'S·ªë ti·ªÅn kh√¥ng h·ª£p l·ªá'});
    const addInfo = encodeURIComponent(`HDG STUDIO ${data.userId} ${data.username} ${data.amount}`);
    const qr = `https://img.vietqr.io/image/vietinbank-0396436954-XsnUkVz.jpg?amount=${data.amount}&addInfo=${addInfo}&accountName=Pham+Hai+Dang`;
    return { qr: qr, username: data.username };
  }

  async handleCassoTransaction(body: any): Promise<void> {
    try {
      const data = body?.data;
      if (!data || typeof data !== 'object') {
        console.log('‚ùå Webhook kh√¥ng c√≥ d·ªØ li·ªáu giao d·ªãch ho·∫∑c sai c·∫•u tr√∫c.');
        return;
      }

      const { description, id: tid, amount, reference, transactionDateTime } = data;
      console.log(`üì© Nh·∫≠n giao d·ªãch ${tid}: ND: ${description}`);

      if (!description) {
        console.log('‚ö†Ô∏è Thi·∫øu n·ªôi dung giao d·ªãch.');
        return;
      }

      // ‚úÖ Chu·∫©n h√≥a ND
      const normalized = description.replace(/%/g, ' ').trim();
      const parts = normalized.split(/\s+/);
      const studioIndex = parts.findIndex(p => p.toUpperCase() === 'STUDIO');

      // Format ph·∫£i c√≥ √≠t nh·∫•t 5 ph·∫ßn t·ª≠: ["HDG", "STUDIO", "1", "dang123", "50000"]
      if (studioIndex === -1 || parts.length < studioIndex + 4) {
        console.log(`‚ö†Ô∏è ND thi·∫øu d·ªØ li·ªáu h·ª£p l·ªá sau 'STUDIO': ${description}`);
        return;
      }

      // ‚úÖ L·∫•y 3 ph·∫ßn t·ª≠ sau c√πng
      const userId = parseInt(parts[studioIndex + 1]);
      const username = parts[studioIndex + 2];
      // const inputAmount = parseInt(parts[studioIndex + 3]);
      const inputAmount = amount;

      if (isNaN(userId) || isNaN(inputAmount)) {
        console.log(`‚ö†Ô∏è D·ªØ li·ªáu kh√¥ng h·ª£p l·ªá (ID ho·∫∑c s·ªë ti·ªÅn): ${description}`);
        return;
      }

      // ‚úÖ G·ªçi updateMoney
      const request: UpdateMoneyRequest = {
        userId,
        amount: inputAmount,
      };

      await this.updateMoney(request);
      await this.financeService.createFinanceRecord({
        user_id: userId,
        type: "NAP",
        amount: inputAmount
      }) 

      winstonLogger.log({ nhiemVu: 'thongBaoNapTien', username: username, amount: inputAmount })

      console.log(`‚úÖ ƒê√£ c·ªông ${inputAmount}ƒë cho userId ${userId} (username: ${username})`);
    } catch (error) {
      console.log('‚ùå L·ªói khi x·ª≠ l√Ω webhook Casso:', error);
      throw new RpcException({
        code: status.INTERNAL,
        message: 'L·ªói x·ª≠ l√Ω webhook',
      });
    }
  }
}